rm warnings